--- a/css/default.css
+++ b/css/default.css
@@ -1,20 +1,16 @@
 body {
+    
     font-family: Verdana, Arial, Helvetica;
     margin: 0px;
     padding: 0px;
 }
 
 header {
-    background-color: #aaa;
-    height: 80px;
+    /*background-color: rgb(128,0,0);*/
+    border-bottom: 1px solid black;
+    background: url(/images/header_bg.jpg) no-repeat center 0;
+    height: 150px;
     
-}
-
-header h1 {
-    color: #fff;
-    right: 120px;
-    position: absolute;
-    top: 10px;
 }
 
 #content {
