--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,12 @@
+/**
+ *  GLOBAL STYLES
+ */
+
+
+html {
+    /*font-size: 62.5%;*/
+}
+
 body {
     
     font-family: Verdana, Arial, Helvetica;
@@ -10,46 +19,78 @@ header {
     border-bottom: 1px solid black;
     background: url(/images/header_bg.jpg) no-repeat center 0;
     height: 150px;
-    
+    position: relative;
 }
 
-#content {
+.page-home section {
 
+}
+
+.page-blog section {
+
+}
+
+section {
+    float: center;
+    margin: 100px 50px 100px 50px;
+    width: 800px;
 }
 
 
 nav {
+    bottom: 10px;
     height: 30px;
+    left: 10px;
     margin-left: 5%;
+    position: absolute;
     width: 90%;
 }
-
-#alpha {
-    margin: 80px;
-}
-
 
 nav ul {
     height: 30px;
 }
 
 nav li {
+    color: white;
     float: left;
     margin: 4px 2px 4px 20px;
     list-style: none;
 }
 
+nav li + li {
+    border-left: 1px solid white;
+    padding-left: 20px;
+}
+
+nav li a {
+    color: white;
+}
+
 footer {
     clear: both;
     margin-top: 0px;
+    text-align: center;
 }
 
 footer ul {
     height: 30px;
+    width: 300px;
 }
 
 footer li {
     float: left;
     list-style: none;
     margin: 2px 0px 0px 20px;
+}
+
+/**
+ *  BLOG STYLES
+ */
+
+body.page-blog {
+    
+}
+
+body.page-blog article {
+      
 }
