--- a/css/basic1.css
+++ b/css/basic1.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-color: rgb(204,204,204);
+    background-color: rgb(242,101,33);
     
     font-family: Arial, Helvetica, Verdana, sans-serif;
     margin: 0px;
@@ -30,17 +30,18 @@ p {
  *  HEADER
  */
 
+
 header {
     background: url(/images/basic1/header-background.jpg) repeat-x top center;
     /*background: url(/images/header_bg.jpg) no-repeat center 0;*/
-    height: 180px;
+    height: 160px;
     margin: 0 0;
     position: relative;
 }
 
 header h1 {
     background: url(/images/basic1/header-h1-background.jpg) repeat-x top center;
-    height: 150px;
+    height: 160px;
     margin: 0 auto; 
     padding: 0;
     text-indent: -9999px;
@@ -55,10 +56,10 @@ header h1 {
  */
 
 nav {
-    background: url(/images/basic1/nav-background.jpg) repeat-x;
+    /*background: url(/images/basic1/nav-background.jpg) repeat-x;*/
     bottom: 0px;
-    height: 60px;
-    margin: -20px auto 0 auto;
+    height: 30px;
+    margin: 0px auto 0 auto;
     padding: 0;
     position: relative;
     width: 800px;
@@ -67,19 +68,22 @@ nav {
 nav ul {
     height: 30px;
     margin: 0;
-    padding: 0px;
+    padding: 0 0 0 60px;
 }
 
 nav li {
+    color: rgb(121,0,0);
     float: left;
+    font-size: 1.3em;
     height: 30px;
     margin: 0;
     padding: 5px 20px 0 20px;
     list-style: none;
+    
 }
 
 nav li.active {
-    background-color: white;
+    font-weight: bold;
 }
 
 /* All except first li
@@ -89,7 +93,8 @@ nav li + li {
 } */
 
 nav li a {
-    color: white;
+    /*color: white;*/
+    color: rgb(121,0,0);
     text-decoration: none;
 }
 
@@ -109,6 +114,13 @@ article h2 {
 img.about, img.default {
     border: 1px solid black;
     float: right;
+    margin: 0 20px 0px 10px;
+    padding: 2px;
+}
+
+img.books {
+    border: 1px solid black;
+    float: left;
     margin: 0 20px 0px 10px;
     padding: 2px;
 }
@@ -236,7 +248,14 @@ article.gallery img {
  *  Facebook
  */
  
-#fb_container {
-    display: none;
-    visibility: hidden;
+#fb_container_outer {
+    margin: 0 auto;
+    position: relative;
+    top: 18px;
+}
+
+#fb_container_inner {
+    margin: 0 auto;
+    position: absolute;
+    top: 18px;
 }
